log
Thu Apr 21 11:27:08 HSP 2022: 
 treemap.c | 12 ++++++++++++
 1 file changed, 12 insertions(+)
In file included from test.c:4:0:
treemap.c: In function 'createTreeMap':
treemap.c:40:20: error: too few arguments to function 'createTreeNode'
     TreeMap* new = createTreeNode();
                    ^~~~~~~~~~~~~~
treemap.c:29:12: note: declared here
 TreeNode * createTreeNode(void* key, void * value) {
            ^~~~~~~~~~~~~~
treemap.c:40:14: error: unused variable 'new' [-Werror=unused-variable]
     TreeMap* new = createTreeNode();
              ^~~
cc1.exe: all warnings being treated as errors
Compilation failed
d0f6b4c
Thu Apr 21 11:27:18 HSP 2022: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|8
total_score: 0/70
240ef45
Thu Apr 21 11:28:33 HSP 2022: 
 treemap.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
In file included from test.c:4:0:
treemap.c: In function 'searchTreeMap':
treemap.c:85:27: error: statement with no effect [-Werror=unused-value]
             tree->current == aux;
             ~~~~~~~~~~~~~~^~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
aaea1dd
Thu Apr 21 11:28:39 HSP 2022: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  8|7
total_score: 10/70
b318995
Thu Apr 21 11:35:00 HSP 2022: 
 treemap.c | 9 +++++----
 1 file changed, 5 insertions(+), 4 deletions(-)
 tests:  11|6
total_score: 15/70
17762e3
Thu Apr 21 11:52:00 HSP 2022: 
 treemap.c | 11 +++++++++++
 1 file changed, 11 insertions(+)
 tests:  11|6
total_score: 15/70
25f49dc
Thu Apr 21 11:54:59 HSP 2022: 
 treemap.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  0|0
df362e7
Thu Apr 21 12:00:06 HSP 2022: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
cc79ef0
Thu Apr 21 12:01:53 HSP 2022: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
644ee80
Thu Apr 21 12:02:36 HSP 2022: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  12|6
total_score: 15/70
cbbff76
Thu Apr 21 12:03:02 HSP 2022: 
 treemap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  13|5
total_score: 25/70
8b4c8df
Thu Apr 21 12:05:06 HSP 2022: 
 treemap.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  13|5
total_score: 25/70
78a473b
Thu Apr 21 12:06:11 HSP 2022: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  15|4
total_score: 25/70
75e78b3
Thu Apr 21 12:11:34 HSP 2022: 
 treemap.c | 6 ++++++
 1 file changed, 6 insertions(+)
 tests:  15|4
total_score: 25/70
7b4fce8
Thu Apr 21 12:18:06 HSP 2022: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  15|4
total_score: 25/70
7250fd6
Thu Apr 21 12:18:33 HSP 2022: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  15|4
total_score: 25/70
29f5819
Thu Apr 21 12:19:11 HSP 2022: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  15|4
total_score: 25/70
5d095c6
Thu Apr 21 12:22:36 HSP 2022: 
 treemap.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
In file included from test.c:4:0:
treemap.c: In function 'removeNode':
treemap.c:84:71: error: comparison between pointer and integer [-Werror]
         if (tree->lower_than(node->pair->key, node->parent->pair->key == 1))
                                                                       ^~
treemap.c:84:47: error: passing argument 2 of 'tree->lower_than' makes pointer from integer without a cast [-Werror=int-conversion]
         if (tree->lower_than(node->pair->key, node->parent->pair->key == 1))
                                               ^~~~
treemap.c:84:47: note: expected 'void *' but argument is of type 'int'
treemap.c:86:71: error: comparison between pointer and integer [-Werror]
         if (tree->lower_than(node->parent->pair->key, node->pair->key == 1))
                                                                       ^~
treemap.c:86:55: error: passing argument 2 of 'tree->lower_than' makes pointer from integer without a cast [-Werror=int-conversion]
         if (tree->lower_than(node->parent->pair->key, node->pair->key == 1))
                                                       ^~~~
treemap.c:86:55: note: expected 'void *' but argument is of type 'int'
cc1.exe: all warnings being treated as errors
Compilation failed
f2f966c
Thu Apr 21 12:23:13 HSP 2022: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  16|4
total_score: 30/70
932dee8
Thu Apr 21 14:50:59 HSP 2022: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  16|4
total_score: 30/70
dbbc213
Thu Apr 21 14:53:10 HSP 2022: 
 treemap.c | 11 +++++++++++
 1 file changed, 11 insertions(+)
 tests:  0|0
d8ba47a
Thu Apr 21 14:53:35 HSP 2022: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
8b50c10
Thu Apr 21 14:54:50 HSP 2022: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
447f2a1
Thu Apr 21 14:57:27 HSP 2022: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  16|4
total_score: 30/70
5ea1fbd
Thu Apr 21 14:58:03 HSP 2022: 
 treemap.c | 11 +++++++++++
 1 file changed, 11 insertions(+)
 tests:  16|4
total_score: 30/70
3962b94
Thu Apr 21 14:59:04 HSP 2022: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  16|4
total_score: 30/70
eb09a13
Thu Apr 21 15:00:24 HSP 2022: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
1ec34be
Thu Apr 21 15:07:40 HSP 2022: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
e857ccd
Thu Apr 21 15:10:48 HSP 2022: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
0beb4a6
Thu Apr 21 15:11:34 HSP 2022: 
 treemap.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
 tests:  0|0
89439f2
